tests/stderr-snapshots/integration__integration__mapfiles__intrinsic_has_insufficient_args.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic AssignOp(op="="; type="int"): not enough arguments
  ┌─ <mapfile-1>:3:4
  │
3 │ 99 AssignOp(op="="; type="int")
  │    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ intrinsic defined here
4 │ !ins_signatures
5 │ 99 S
  │    ^ signature defined here


